tests/parse_print/random_perturb/set01/change-08/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/change-08/change-08.essence:3:29:
unexpected (
expecting end of input, rest of statement, or statement
    find x : set (size 2) of inN(1..3)
                                ^